--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -21,7 +21,25 @@ Client client = new Client("189.189.189.189", 8890, 2, "account","password", "12
 Submit submit = new Submit("10620068", "18967441118", "你好！","112000000000061090527"); Result result = client.Send(submit);
 System.out.println("ErrorCode:"+result.ErrorCode);System.out.println("MsgID:"+result.ErrorDescription);
 }}}
-==1.3接收==
+==1.3发送长短信==
+使用Client.SendLong(Submit)方法可以直接发送长短信
+
+{{{
+                Client client = new Client("网关ip地址", 8890, 2, "网关账号",
+                                "网关密码", "企业代码", 0);
+                Submit submit = new Submit("10620068", "15305711873", "浙江在线07月12日讯 7月11日，正在葡萄牙参加一个重要经贸洽谈会的温州人叶茂西证实，英国本土一家卫星电视台——PROPELLER(译为螺旋桨)电视台已被他旗下的西京集团有限公司全资收购。\nPROPELLER是欧洲第一个100%放映全新的原创节目的数字卫星电视频道，通过英国天空广播公司的卫星平台传送，由英国格林斯比研究所附属公司图像频道有限公司于2006年2月创办，它最早在英国约克郡播放，后来在欧洲数十个国家落地。2008年11月，该电视台在意大利威尼斯获得“全欧洲最佳卫视电影频道”奖项。\n叶茂西是平阳人，现任北京温州商会会长、中国丝网印刷协会理事长、西京集团有限公司董事长等职。今年初，在温家宝总理访英期间，叶茂西随中国经贸代表团出访英国。其间，叶茂西了解到，金融危机使英国的这家电视台不能再获得政府资助，急需引进战略投资人。当时，叶茂西以西京集团的名义与该电视台达成初步收购意向。经过近半年努力，上月，西京集团斥巨资完成了对该电视台的收购工作。".getBytes("iso-10646-ucs-2"),
+                "112000000000061090527");
+                submit.setMsgFormat(8);
+                Result [] result= client.SendLong(submit);
+                
+                for(int i=0;i<result.length;i++){
+                        System.out.println("result:"+result.ErrorCode);
+                        System.out.println("msgid:"+result.ErrorDescription);
+                        
+                }
+}}}
+
+==1.4接收==
 {{{
 Client client = new Client("短信网关ip地址", 8890, 2, "短信网关账号", "短信网关密码",
         "企业代码（8位长）", 0); // new Client("IP地址",端口,登录模式,"帐号","密码")
